src/renderer/src/assets/main.css
/* ... */
.sidebar .siteInfo .info {
  font-size: 7px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
}

.sidebar .siteInfo .info h1 {
  font-size: 14px;
  color: var(--lighter-text-color);
  font-family: sans-serif;
  font-weight: 500;
  padding: 0px;
  margin: 0px;
  text-align: left;
}

.sidebar .siteInfo .info button {
  padding: 5px;
}

.sidebar .siteInfo .info button svg {
  margin-right: 0px;
}

.sidebar ul {
  padding-inline-start: 0px;
  list-style-type: none;
  flex-grow: 1;
  margin: 0px;
  margin-left: 14px;
  margin-right: 14px;
}

.sidebar ul li {
  height: fit-content;
  color: var(--lightest-text-color);
  font-size: 14px;
  border-bottom: 1px solid #162748;
  font-weight: 100;
}

.sidebar ul li.parent {
  display: flex;
  border-bottom: none;
}

.sidebar ul li button.parent {
  flex-grow: 1;
  display: flex;
  align-items: anchor-center;
  font-size: 18px;
  font-weight: 400;
  padding-top: 16px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 16px;
  background: none;
}

.sidebar ul li button.parent:focus button {
  visibility: visible;
}

.sidebar ul li button.parent:focus-within button {
  visibility: visible;
}

.sidebar ul li span.collectionLabel {
  color: var(--lighter-text-color);
  padding-left: 0.7em;
}

.sidebar ul li span {
  display: inline-block;
  word-break: break-word;
  text-indent: 0em;
  padding-left: 2em;
}

.sidebar ul li {
  word-break: break-word;
  font-family: Arial, Helvetica, sans-serif;
  cursor: pointer;
  color: var(--lightest-text-color);
}

.sidebar ul li button {
  justify-content: flex-start;
}

.sidebar ul li .buttons {
  display: none;
}

.sidebar ul li:hover .buttons,
.sidebar ul li:focus-within {
  display: flex;
  align-items: center;
}

.sidebar ul li:hover .buttons button,
.sidebar ul li:focus-within .buttons button {
  width: 20px;
  height: 20px;
  padding: 5px;
  background-color: var(--secondary-color);
  border-radius: 6px;
}

.sidebar ul li:hover .buttons,
.sidebar ul li:focus-within .buttons {
  display: flex;
}

.site-buttons {
  display: inline-grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

.sidebar ul span.listHeader {
  font-size: 14px;
  color: #acbdd2;
  font-weight: 500;
  font-family: Helvetica;
  display: flex;
  line-height: 19px;
  justify-content: space-between;
}

.sidebar ul span.listHeader button {
  padding: 2px;
  margin: 0px;
  min-width: 19px;
  border-radius: 6px;
  width: 20px;
  height: 20px;
}

.sidebar ul button.parent button {
  padding: 5px;
  border-radius: 6px;
  visibility: hidden;
}

.sidebar ul button.parent:hover button {
  display: inherit;
  visibility: visible;
}

.sidebar ul .parent button svg {
  margin-right: 0px;
}

.main-view {
  flex-grow: 1;
  background: var(--primary-color);
  box-sizing: border-box;
  padding: 20px;
  border-radius: 6px;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  scrollbar-width: none;
  position: relative;
}

.main-view.thin-padding {
  padding: 14px !important;
}

.title-bar {
  display: flex;
  flex-direction: row;
}

.title-bar .title {
  flex-grow: 1;
}

.title-bar button {
  align-self: center;
  cursor: pointer;
  background: none;
}

.main-view .title-bar input.title {
  margin: 5px;
  padding: 5px;
  background: none;
  color: white;
  border: none;
  outline: none;
  font-size: 26px;
  font-weight: 800;
  -webkit-tap-highlight-color: none;
}

table.metadata {
  border-radius: 8px;
  margin-top: 10px;
  border-collapse: collapse;
}

table.metadata table tr td {
  height: 26px;
}

table.metadata tr {
  display: block;
  padding: 8px;
  display: flex;
  align-items: anchor-center;
  height: 26px;
}

table.metadata tr .buttons {
  margin-left: 15px;
  display: none;
}

table.metadata tr .buttons button {
  width: 24px;
  height: 24px;
  padding: unset;
  background: none;
}

table.metadata tr .buttons button:hover {
  background: var(--secondary-color);
}

table.metadata tr .buttons button svg {
  margin-right: 0px;
  color: white;
}

table.metadata tr:hover .buttons,
table.metadata tr:focus-within .buttons {
  display: flex;
  gap: 10px;
}

table.metadata tr:last-of-type {
  border: none;
}

table.metadata tr td:first-child {
  padding-right: 10px;
  color: var(--lighter-text-color);
  min-width: fit-content;
}
table.metadata tr td:not(:first-child){
  max-height:3rem;
  overflow:scroll
}
table.metadata tr td {
  color: var(--lightest-text-color);
}

.toolbar {
  border-collapse: collapse;
  border-radius: 8px;
  background-color: var(--tertiary-color);
  margin: 10px;
  margin-top: 16px;
  box-sizing: border-box;
  padding: 8px;
  position: sticky;
  top: 6px;
  left: 0px;
  z-index: 100;
}

.toolbar button {
  width: 24px;
  height: 24px;
  padding: 0px;
}

.toolbar button svg {
  margin-right: 0px !important;
}

.main-view img {
  max-width: 60%;
}

.postsList {
  height: 100%;
}

.head-container h1 {
  padding: 0px;
  margin: 0px;
  color: #e5eeff
}

.postsList ul {
  margin-right: 10px;
  margin-top: 20px;
}

.postsList ul,
.postsList li {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.postsList ul li {
  display: flex;
  margin-bottom: 15px;
  border-radius: 6px;
}

.postsList ul li button.listItem {
  flex-grow: 1;
  padding: unset;
  margin: unset;
  justify-content: space-between;
  padding-left: 15px;
  padding-right: 15px;
  background: none;
  height: 50px;
  min-width: 0;
}

.postsList ul li .buttons {
  margin-right: 6px;
  display: none;
}

.postsList ul li .buttons button {
  padding: 10px;
  width: 50px;
  height: 50px;
  justify-content: center;
  align-items: center;
}

.postsList ul li:hover .buttons,
.postsList ul li:focus-within .buttons {
  display: flex;
}

.postsList ul li button label {
  white-space: pre;
  text-overflow: ellipsis;
  max-width: 85%;
  overflow: hidden;
  cursor: pointer;
  font-size: 16px;
  color: var(--lightest-text-color);
}
/* ... */

